<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btn_favorite"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="Favorite"
        app:showAsAction="always"/>
    <item
        android:id="@+id/change_language"
        android:icon="@drawable/ic_baseline_language_24"
        android:title="@string/set_language"
        app:showAsAction="never"/>
    <item
        android:id="@+id/bt_dicoding_web"
        android:icon="@drawable/ic_baseline_language_24"
        android:title="@string/bt_web"
        app:showAsAction="never"/>
    <item
        android:id="@+id/bt_reminder"
        android:icon="@drawable/ic_baseline_notifications_active_24"
        android:title="@string/title_reminder"
        app:showAsAction="never"/>
    <item
        android:id="@+id/bt_about"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/exit_btn"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/bt_exit"
        app:showAsAction="never"/>
</menu>