<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    android:elevation="3dp"
    android:padding="24sp"
    app:cardCornerRadius="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/id_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/number"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.069" />

        <TextView
            android:id="@+id/name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/fullname"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/id_txt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.056" />

        <TextView
            android:id="@+id/username_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/username"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/id_txt"
            app:layout_constraintTop_toBottomOf="@+id/name_txt" />

        <TextView
            android:id="@+id/company_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/company"
            android:textColor="@color/bg1"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/id_txt"
            app:layout_constraintTop_toBottomOf="@+id/username_txt" />

        <TextView
            android:id="@+id/location_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/location"
            android:textColor="@color/bg1"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/id_txt"
            app:layout_constraintTop_toBottomOf="@+id/company_txt" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>