<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    app:cardBackgroundColor="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/list_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:src="@color/teal_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/list_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/fullname"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/list_avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/list_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_fullname"
            android:layout_marginStart="10dp"
            android:text="@string/username"
            app:layout_constraintStart_toEndOf="@id/list_avatar"
            app:layout_constraintTop_toBottomOf="@id/list_fullname" />

        <TextView
            android:id="@+id/list_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_username"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:background="@color/bg3"
            android:text="@string/repository"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/list_avatar"
            app:layout_constraintTop_toBottomOf="@id/list_username" />

        <TextView
            android:id="@+id/list_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_repository"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:background="@color/bg1"
            android:text="@string/following"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/list_avatar"
            app:layout_constraintTop_toBottomOf="@id/list_repository" />

        <TextView
            android:id="@+id/list_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_repository"
            android:layout_marginStart="4dp"
            android:layout_marginTop="3dp"
            android:background="@color/bg2"
            android:text="@string/follower"
            app:layout_constraintStart_toEndOf="@id/list_following"
            app:layout_constraintTop_toBottomOf="@id/list_repository" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>