<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="10dp"
        android:backgroundTint="@color/bg1"
        android:src="@drawable/nofavorite"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView1"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="110dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="25dp"
                    android:elevation="3dp"
                    app:cardCornerRadius="7dp">

                    <LinearLayout
                        android:id="@+id/layoutLinear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/det_fullName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fullname"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/det_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/username" />

                        <TextView
                            android:id="@+id/det_company"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/company" />

                        <TextView
                            android:id="@+id/det_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/location" />

                        <TextView
                            android:id="@+id/det_repository"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/repository" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/det_following"
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:text="@string/following" />

                            <TextView
                                android:id="@+id/det_followers"
                                android:layout_width="143dp"
                                android:layout_height="wrap_content"
                                android:text="@string/follower" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/det_avatar"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="108dp"
                    android:layout_marginTop="10dp"
                    android:elevation="10dp"
                    android:src="@color/purple_200"
                    app:civ_border_color="@color/teal_700"
                    app:civ_border_width="1dp" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="300dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/teal_700"
                    android:minHeight="?actionBarSize"
                    app:tabIndicatorFullWidth="false"
                    app:tabIndicatorHeight="2dp"
                    app:tabMode="fixed" />

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="355dp"
                    android:layout_marginRight="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tabs"
                    app:layout_constraintTop_toBottomOf="@+id/tabs" />


            </RelativeLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
